# jax-pretraining

./: .gitignore  README.md  main.py  pyproject.toml
addition_transformer/: __init__.py  checkpoint.py  data.py  model.py  train.py  vocab.py
benchmarks/: benchmark_moe.py
chinchilla/: __init__.py  __main__.py  fit.py  metrics.py  moe_model.py  presets.py  report.py  sweep.py
kernels/: __init__.py  fused_moe_pallas_v2.py  fused_moe_reference.py  fused_moe_updown.py
moe/: __init__.py  layers.py  ragged_moe.py  routing.py
notebooks/: addition_transformer_colab.ipynb
reports/: chinchilla_addition.md  chinchilla_results.json  chinchilla_results_old.json
tests/: test_pallas_v2.py  test_ragged_fused.py
